# otterlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  SECURITY.md  default.project.json  flake.nix  roadmap.md  setup.sh
.github/workflows/: ci.yml
crates/ast/src/: lib.rs  nodes.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  manager.rs  metadata.rs  path.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  span.rs
crates/ffi/src/: rust_stubgen.rs  rustdoc_extractor.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: formatter.rs  lib.rs
crates/lexer/src/: token.rs  tokenizer.rs
crates/module/src/: loader.rs  processor.rs  resolver.rs
crates/otterc_codegen/src/llvm/: bridges.rs
crates/otterc_ffi/src/: rust_stubgen.rs  types.rs
crates/otterc_ffi/tests/: rust_stubgen_tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lib.rs
docs/: API_REFERENCE.md  FFI_GUIDE.md  FFI_TRANSPARENT.md  GC_GUIDE.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  ROADMAP.md  TUTORIALS.md
examples/: ffi_rand_advanced.otter  ffi_rand_demo.otter  ffi_test.ot  pi_leibniz.otter  pi_leibniz_otter
examples/basic/: enum_demo.ot  error_handling_basics.ot  exception_advanced.ot  exception_basics.ot  hello.otter
examples/ffi/: test_ffi_struct.ot
ffi/rand/: bridge.yaml
src/: cli.rs  lib.rs
src/codegen/: llvm.rs  target.rs
src/codegen/llvm/: build.rs  compiler.rs
src/codegen/llvm/compiler/: expr.rs  mod.rs  stmt.rs  types.rs
src/ffi/: cargo_bridge.rs  metadata.rs  mod.rs  rust_stubgen.rs  rustdoc_extractor.rs
src/language/: mod.rs
src/lsp/: mod.rs
src/module/: loader.rs  processor.rs
src/parser/: grammar.rs
src/repl/: engine.rs
src/runtime/: error.rs  ffi.rs  strings.rs
src/runtime/jit/: engine.rs  executor.rs
src/runtime/jit/layout/: simd.rs
src/runtime/memory/: gc.rs
src/runtime/stdlib/: builtins.rs  io.rs  json.rs  math.rs  net.rs  rand.rs  runtime.rs  sync.rs  sys.rs  task.rs  test.rs  time.rs
src/runtime/task/: timer.rs  tls.rs
src/typecheck/: checker.rs  types.rs
stdlib/otter/: core.ot  fmt.otter
syntaxes/: otterlang.tmLanguage.json
tests/: ffi_transparent.rs  release_audit_test.ot
