cargo-features = ["codegen-backend"]

[package]
name = "otterlang"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jonathanmagambo/otterlang"
readme = "README.md"
description = "An experimental indentation-sensitive programming language with LLVM backend"
keywords = ["language", "compiler", "programming-language", "llvm", "jit"]
categories = ["development-tools", "programming"]
authors = ["OtterLang Contributors"]

[[bin]]
name = "otterlang"
path = "src/main.rs"

[[bin]]
name = "otter"
path = "src/main.rs"

[features]
default = []
task-runtime = []

[dependencies]
anyhow = "1.0"
tempfile = "3.10"
ariadne = "0.3"
abi_stable = "0.11"
ahash = "0.8"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
duct = "0.13"
glob = "0.3"
once_cell = "1.19"
inventory = "0.3"
indicatif = "0.17"
inkwell = { version = "0.x", features = ["llvm18-1"] }
libloading = "0.8"
libm = "0.2"
libc = "0.2"
memmap2 = "0.9"
parking_lot = "0.12"
rayon = "1.8"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = "0.30"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

[dev-dependencies]
