cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = ["crates/*"]

[package]
name = "otterlang"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonathanmagambo/otterlang"
readme = "README.md"
description = "An experimental indentation-sensitive programming language with LLVM backend"
keywords = ["language", "compiler", "programming-language", "llvm", "jit"]
categories = ["development-tools", "programming"]
authors = ["OtterLang Contributors"]

[[bin]]
name = "otterlang"
path = "src/main.rs"

[[bin]]
name = "otter"
path = "src/bin/otter.rs"

[[bin]]
name = "otterlang-lsp"
path = "src/bin/lsp.rs"

[features]
default = []
task-runtime = ["otterc_runtime/task-runtime"]
toml-config = ["otterc_runtime/toml-config"]
ffi-main = ["otterc_runtime/ffi-main"]

[dependencies]
otterc_ast.path = "crates/otterc_ast"
otterc_cache.path = "crates/otterc_cache"
otterc_codegen.path = "crates/otterc_codegen"
otterc_config.path = "crates/otterc_config"
otterc_ffi.path = "crates/otterc_ffi"
otterc_fmt.path = "crates/otterc_fmt"
otterc_jit.path = "crates/otterc_jit"
otterc_lexer.path = "crates/otterc_lexer"
otterc_module.path = "crates/otterc_module"
otterc_parser.path = "crates/otterc_parser"
otterc_runtime.path = "crates/otterc_runtime"
otterc_span.path = "crates/otterc_span"
otterc_symbol.path = "crates/otterc_symbol"
otterc_typecheck.path = "crates/otterc_typecheck"
otterc_utils.path = "crates/otterc_utils"

anyhow.workspace = true
chrono.workspace = true
libc.workspace = true
serde.workspace = true
directories.workspace = true
glob.workspace = true
tracing.workspace = true
rayon.workspace = true
ureq.workspace = true
tokio.workspace = true
serde_json.workspace = true

clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tower-lsp = "0.20"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
inkwell = { version = "0.6", features = ["llvm18-1"] }
serde = { version = "1.0", features = ["derive"] }
abi_stable = "0.11"
libloading = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
ahash = "0.8"
tempfile = "3.10"
sysinfo = "0.30"
inventory = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
libc = "0.2"
glob = "0.3"
tracing = "0.1"
rayon = "1.8"
ureq = { version = "2", default-features = true }
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }

[lints]
workspace = true

[workspace.lints.clippy.suspicious]
level = "warn"
priority = -1

[workspace.lints.clippy.complexity]
level = "warn"
priority = -1

[workspace.lints.clippy.perf]
level = "warn"
priority = -1

[workspace.lints.clippy]
allow_attributes.level = "warn"
allow_attributes_without_reason.level = "warn"
dbg_macro.level = "warn"
enum_glob_use.level = "warn"
exit.level = "warn"
macro_use_imports.level = "warn"
manual_let_else.level = "warn"
manual_string_new.level = "warn"
map_err_ignore.level = "warn"
match_same_arms.level = "warn"
option_as_ref_cloned.level = "warn"
option_option.level = "warn"
panic.level = "deny"
print_stderr.level = "warn"
print_stdout.level = "warn"
ref_options.level = "warn"
self_named_module_files.level = "warn"
semicolon_if_nothing_returned.level = "warn"
semicolon_inside_block.level = "warn"
try_err.level = "warn"
unused_result_ok.level = "warn"

# These are useful lints that we want, however at the moment they introduce *many* warnings
# that will take time to fix. We will come back later to enable these one by one and resolve
# their warnings.
# exhaustive_enums.level = "warn"
# exhaustive_structs.level = "warn"
# module_name_repetitions.level = "warn"
# needless_pass_by_value.level = "warn"
# non_std_lazy_statics.level = "warn"
# same_name_method.level = "warn"
# similar_names.level = "warn"
# todo.level = "deny"
# unimplemented.level = "deny"
# unreachable.level = "deny"
# unused_async.level = "warn"
# unused_self.level = "warn"
# unused_trait_names.level = "warn"
# unwrap_used.level = "warn"
